# claude-code-email-bridge

./: .env.example  .gitignore  CLAUDE.md  RELEASE_NOTES.md  build.bat  build.sh  claude-email-bridge.spec  cleanup.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt
config/: settings.py
core/: executor.py
docs/: MVP-README.md
gui/: api.py  app.py  index.html  mail_providers.py  tkinter_app.py
mail/: parser.py  receiver.py  sender.py
queue/: manager.py
tests/: conftest.py
tests/unit/: test_parser.py  test_queue_manager.py  test_rate_limiter.py  test_settings.py
