[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-email-bridge"
version = "1.0.0"
description = "通过邮件远程控制 Claude Code 的桥接工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pywebview>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pyinstaller>=6.0",
]

[project.scripts]
claude-email-bridge = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 60
